--- a/.travis.yml
+++ b/.travis.yml
@@ -15,10 +15,7 @@ before_install:
  - ./travis-tool.sh bootstrap
 
 install:
- - ./travis-tool.sh install_aptget r-cran-rcpp
-
-#script: 
-# - ./travis-tool.sh run_tests
+ - ./travis-tool.sh install_github dcdillon/RcppHoney
 
 after_script:
  - ./travis-tool.sh dump_logs
