Still working on .travis.yml...this is harder than template metaprogramming

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,8 @@ before_install:
 install:
  - ./travis-tool.sh install_github dcdillon/RcppHoney
 
+script:
+
 after_script:
  - ./travis-tool.sh dump_logs
 
