--- a/.travis.yml
+++ b/.travis.yml
@@ -7,27 +7,22 @@
 language: c
 
 sudo: required
-
-env:
-  global:
-    - R_BUILD_ARGS="--no-build-vignettes --no-manual"
-    - R_CHECK_ARGS="--no-build-vignettes --no-manual --as-cran"
-    
+   
 before_install:
- ## r-travis by Craig Citro et al
- - curl -OL http://raw.github.com/craigcitro/r-travis/master/scripts/travis-tool.sh
- - chmod 755 ./travis-tool.sh
- - ./travis-tool.sh bootstrap
+  - curl -OL http://raw.github.com/craigcitro/r-travis/master/scripts/travis-tool.sh
+  - chmod 755 ./travis-tool.sh
+  - ./travis-tool.sh bootstrap
 
 install:
- - ./travis-tool.sh install_github dcdillon/RcppHoney
+  - ./travis-tool.sh install_aptget r-cran-rcpp 
 
 script:
- - true
-after_script:
- - ./travis-tool.sh dump_logs
+  - ./travis-tool.sh run_tests
+
+after_failure:
+  - ./travis-tool.sh dump_logs
 
 notifications:
- email:
-   on_success: change
-   on_failure: change
+  email:
+    on_success: change
+    on_failure: change
