--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,9 @@
 language: c
 
 sudo: required
-   
+
+dist: trusty
+
 before_install:
   - curl -OL http://raw.github.com/craigcitro/r-travis/master/scripts/travis-tool.sh
   - chmod 755 ./travis-tool.sh
