--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,6 +4,7 @@ Title: Iterator Based Expression Template Expansion of Standard Operators
 Version: 0.1.1
 Author: Daniel C. Dillon
 Maintainer: Daniel C. Dillon <dcdillon@gmail.com>
+URL: https://github.com/dcdillon/RcppHoney
 Description: Creates an easy way to use expression templates with R
              semantics on any iterator based structure.
 License: GPL (>= 2)
