--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ before_install:
   - ./travis-tool.sh bootstrap
 
 install:
-  - ./travis-tool.sh install_aptget r-cran-rcpp 
+  - ./travis-tool.sh install_aptget r-cran-rcpp r-cran-runit 
 
 script:
   - ./travis-tool.sh run_tests
