--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,6 +6,7 @@ Author: Daniel C. Dillon
 Maintainer: Daniel C. Dillon <dcdillon@gmail.com>
 URL: https://github.com/dcdillon/RcppHoney
 BugReports: https://github.com/dcdillon/RcppHoney/issues
+VignetteBuilder: knitr
 Description: Creates an easy way to use expression templates with R
              semantics on any iterator based structure.
 License: GPL (>= 2)
