--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,4 @@
-# Sample .travis.yml for R projects.
-#
 # See the r-travis repo and its wiki 
-#     https://github.com/craigcitro/r-travis/wiki
 #     https://github.com/eddelbuettel/r-travis/
 
 language: c
@@ -11,18 +8,17 @@ sudo: required
 dist: trusty
 
 before_install:
-  - curl -OL http://raw.github.com/craigcitro/r-travis/master/scripts/travis-tool.sh
-  - chmod 755 ./travis-tool.sh
-  - ./travis-tool.sh bootstrap
+  - curl -OLs http://eddelbuettel.github.io/r-travis/run.sh && chmod 0755 run.sh
+  - ./run.sh bootstrap
 
 install:
-  - ./travis-tool.sh install_aptget r-cran-rcpp r-cran-runit r-cran-knitr r-cran-rmarkdown
+  - ./run.sh install_aptget r-cran-rcpp r-cran-runit r-cran-knitr r-cran-rmarkdown
 
 script:
-  - ./travis-tool.sh run_tests
+  - ./run.sh run_tests
 
 after_failure:
-  - ./travis-tool.sh dump_logs
+  - ./run.sh dump_logs
 
 notifications:
   email:
