--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,8 @@ before_install:
   - ./run.sh bootstrap
 
 install:
-  - ./run.sh install_aptget r-cran-rcpp r-cran-runit r-cran-knitr r-cran-rmarkdown
+  - ./run.sh install_r Rcpp
+  - ./run.sh install_aptget r-cran-runit r-cran-knitr r-cran-rmarkdown
 
 script:
   - ./run.sh run_tests
